2002-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* version.h (OCTAVE_VERSION): Now 2.1.40.

	* p-b-b.cc, op-bm-bm.cc, op-chm.cc, op-cm-cm.cc, op-cm-cs.cc,
	op-cm-m.cc, op-cm-s.cc, op-cs-cm.cc, op-cs-cs.cc, op-cs-m.cc,
	op-cs-s.cc, op-fil-b.cc, op-fil-bm.cc, op-fil-cm.cc, op-fil-cs.cc,
	op-fil-lis.cc, op-fil-m.cc, op-fil-rec.cc, op-fil-s.cc,
	op-fil-str.cc, op-list.cc, op-m-cm.cc, op-m-cs.cc, op-m-m.cc,
	op-m-s.cc, op-range.cc, op-s-cm.cc, op-s-cs.cc, op-s-m.cc,
	op-s-s.cc, op-str-str.cc, op-bm-b.cc, op-cell.cc, BaseSLList.cc,
	BaseSLList.h, ChangeLog, Map.cc, Map.h, SLList.cc, SLList.h,
	SLStack.cc, SLStack.h, Stack.cc, Stack.h, oct-map.cc, oct-map.h,
	oct-obj.cc, oct-obj.h, c-file-ptr-stream.cc, c-file-ptr-stream.h,
	ov-base-mat.cc, ov-base-scalar.cc, ov-base-scalar.h, ov-base.cc,
	ov-base.h, ov-bool-mat.cc, ov-bool-mat.h, ov-bool.cc, ov-bool.h,
	ov-builtin.cc, ov-builtin.h, ov-ch-mat.cc, ov-ch-mat.h,
	ov-colon.cc, ov-complex.cc, ov-complex.h, ov.h, ov-cx-mat.cc,
	ov-cx-mat.h, ov-fcn.cc, ov-fcn.h, ov-file.cc, ov-file.h,
	ov-list.cc, ov-list.h, ov-mapper.cc, ov-mapper.h, ov-range.cc,
	ov-range.h, ov-re-mat.cc, ov-re-mat.h, ov-scalar.cc, ov-scalar.h,
	ov-str-mat.cc, ov-str-mat.h, ov-struct.cc, ov-struct.h,
	ov-typeinfo.cc, ov-typeinfo.h, ov-usr-fcn.cc, ov-usr-fcn.h,
	ov-va-args.cc, ov.cc, ov-base-mat.h, procstream.cc, procstream.h,
	pt-arg-list.cc, pt-arg-list.h, pt-binop.cc, pt-binop.h,
	pt-check.cc, pt-check.h, pt-cmd.cc, pt-cmd.h, pt-colon.cc,
	pt-colon.h, pt-const.cc, pt-const.h, pt-decl.cc, pt-decl.h,
	pt-except.cc, pt-except.h, pt-exp.cc, pt-exp.h, pt-id.cc, pt-id.h,
	pt-idx.cc, pt-idx.h, pt-jump.cc, pt-jump.h, pt-loop.cc, pt-loop.h,
	pt-mat.cc, pt-mat.h, pt-misc.cc, pt-misc.h, pt-pr-code.cc,
	pt-pr-code.h, pt-select.cc, pt-select.h, pt-stmt.cc, pt-stmt.h,
	pt-unop.cc, pt-unop.h, pt.cc, pt.h, symtab.h, token.cc, token.h,
	unwind-prot.cc, unwind-prot.h, ov-base-nd-array.cc,
	ov-re-nd-array.h, ov-re-nd-array.cc, ov-base-nd-array.h,