@@ -34,6 +34,14 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "oct-map.h"
 #include "utils.h"
 
+octave_value_list
+Octave_map::operator [] (const std::string& key) const
+{
+  Pix p = map.seek (key);
+
+  return p ? map.contents (p) : octave_value_list ();
+}
+
 string_vector
 Octave_map::keys (void) const
 {
@@ -58,6 +66,58 @@ Octave_map::array_length (void) const
     }
 
   return array_len;
+}
+
+static string_vector
+equiv_keys (const Octave_map& a, const Octave_map& b)
+{
+  string_vector retval;
+
+  string_vector a_keys = a.keys().qsort ();
+  string_vector b_keys = b.keys().qsort ();
+
+  int a_len = a_keys.length ();
+  int b_len = b_keys.length ();
+
+  if (a_len == b_len)
+    {
+      for (int i = 0; i < a_len; i++)
+	{
+	  if (a_keys[i] != b_keys[i])
+	    return retval;
+	}
+
+      retval = a_keys;
+    }
+  
+  return retval;
+}
+
+Octave_map&
+Octave_map::assign (const idx_vector& idx, const Octave_map& rhs)
+{
+  string_vector t_keys = empty () ? rhs.keys () : equiv_keys (*this, rhs);
+
+  if (! t_keys.empty ())
+    {
+      int len = t_keys.length ();
+
+      for (int i = 0; i < len; i++)
+	{
+	  std::string key = t_keys[i];
+
+	  octave_value_list t_rhs = rhs[key];
+
+	  assign (idx, key, t_rhs);
+
+	  if (error_state)
+	    break;
+	}
+    }
+  else
+    error ("field name mismatch in structure assignment");
+
+  return *this;
 }
 
 Octave_map&
